FIX: message about no comments in post aligned center

--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -418,7 +418,8 @@
   margin-bottom: 12px;
 
   @include media-breakpoint-up($desktop-breakpoint) {
-    margin-bottom: 0;
+    margin-top: auto;
+    margin-bottom: auto;
     height: 100%;
   }
 }
